force-app/main/default/objects/Additional_Company_Name__c/Additional_Company_Name__c.object-meta.xml
<CustomObject>
    <label>Additional Company Name</label>
    <nameField>
        <displayFormat>ACN-{00000}</displayFormat>
        <label>Additional Company Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Company Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>