force-app/main/default/objects/Additional_Company_Name__c/fields/Additional_Company_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Additional_Company_Name_ID__c</fullName>
    <externalId>true</externalId>
    <label>Additional Company Name ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>