force-app/main/default/objects/Additional_Company_Name__c/fields/Also_Known_As__c.field-meta.xml
<CustomField>
    <fullName>Also_Known_As__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Also Known As</label>
    <length>100</length>
    <type>Text</type>
</CustomField>