force-app/main/default/objects/Additional_Company_Name__c/fields/Name_Description__c.field-meta.xml
<CustomField>
    <fullName>Name_Description__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Name Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>