force-app/main/default/objects/Additional_Company_Name__c/fields/Name_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Name_Effective_Date__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Name Effective Date</label>
    <type>Date</type>
</CustomField>