force-app/main/default/objects/Additional_Company_Name__c/fields/Name_Type__c.field-meta.xml
<CustomField>
    <fullName>Name_Type__c</fullName>
    <label>Name Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERP Name</fullName>
            </value>
            <value>
                <fullName>Also Known As</fullName>
            </value>
            <value>
                <fullName>Formerly Known As</fullName>
            </value>
            <value>
                <fullName>Doing Business As</fullName>
            </value>
            <value>
                <fullName>Nickname</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>